added meta tag, google analytics, fixed errors

--- a/about.html
+++ b/about.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNFZV3FRL2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RNFZV3FRL2');
+    </script>
+
     <meta charset="utf-8">
-    <title>Twyla's Café Tropical</title>
+    
+    <meta name="keywords" content="twyla sands, schitt's creek"/>
+    <meta name="description" content="Meet our new owner, Twyla Sands!"/>
+
+    <title>About- Twyla's Café Tropical</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +34,7 @@
     <div class="header-container">
 
       <div class="header-logo">
-        <a href="index.html"><img src="./images/cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
+        <a href="index.html"><img src="./images/twyla's-cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
         </div>
   
       <div class="header-text">
@@ -44,7 +60,7 @@
         <section class="about-us">
           
           <div class="left-column">
-            <h1>ABOUT TYWLA</h1>
+            <h1>ABOUT TWYLA</h1>
             <img class="img-left" src="./images/twyla-profile.jpg" alt="Twyla Sands Profile Photo" title="Twyla Sands" width="200">
 
             <p>Twyla Sands is proud to have been born and raised in Schitt’s Creek. Starting as a waitress at Café Tropical, Twyla bought the restaurant in 2018. As a testament to her dedication to her beloved town and famed restaurant, she decided to keep the original name that has been on the sign since 1947 but made one addition. She added her name ―Twyla’s Café Tropical.</p>
@@ -64,11 +80,11 @@
 
           <div class="right-column">
             <h2>VIDEO GALLERY</h2>
-            <iframe width="445" height="250" src="https://www.youtube.com/embed/IFsT0zxTZA8?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/IFsT0zxTZA8?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <iframe width="445" height="250" src="https://www.youtube.com/embed/0mP593p6CtQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/0mP593p6CtQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <iframe width="445" height="250" src="https://www.youtube.com/embed/8LTtQJlbRiA?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/8LTtQJlbRiA?start=130" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
 
 
