--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNFZV3FRL2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RNFZV3FRL2');
+    </script>
+
     <meta charset="utf-8">
-    <title>Twyla's Café Tropical</title>
+
+    <meta name="keywords" content="cafe tropical menu"/>
+    <meta name="description" content="Twyla's Cafe Tropical is famous for its extensive menu of traditional café fare, Mexican dishes, and Mediterranean cuisine with a tropical flair."/>
+
+    <title>Menu-Twyla's Café Tropical</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +34,7 @@
     <div class="header-container">
 
       <div class="header-logo">
-        <a href="index.html"><img src="./images/cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
+        <a href="index.html"><img src="./images/twyla's-cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
         </div>
   
       <div class="header-text">
@@ -38,7 +54,7 @@
 
     <main class="main-container-menu">
         <section id="top">
-            <span class="menu-heading"><h1>TWYLA'S CAFÉ TROPICAL MENU</h1></span>
+            <h1>TWYLA'S CAFÉ TROPICAL MENU</h1>
         </section>
 
         <section>
@@ -153,19 +169,20 @@
           </div>
         
           <div class="sidebar">
+            
             <ul>
               <li><a href="#top"><img src="images/cafe-wave.png" alt="Wave Logo" width="200"></a></li>
-              <li><a href="#specials"><img src="images/bullet.png" alt="bullet point" width="15"> WEEKLY SPECIALS</li></a>
-              <li><a href="#drinks"><img src="images/bullet.png" alt="bullet point" width="15"> DRINK SPECIALS</li></a>
-              <li><a href="#smoothie"><img src="images/bullet.png" alt="bullet point" width="15"> SMOOTHIES</li></a>
-              <li><a href="#wine"><img src="images/bullet.png" alt="bullet point" width="15"> WINES & BUBBLY</li></a>
-              <li><a href="#beverage"><img src="images/bullet.png" alt="bullet point" width="15"> OTHER BEVERAGES</li></a>
-              <li><a href="#breakfast"><img src="images/bullet.png" alt="bullet point" width="15"> BREAKFAST</li></a>
-              <li><a href="#apps"><img src="images/bullet.png" alt="bullet point" width="15"> APPETIZERS</li></a>
-              <li><a href="#salad"><img src="images/bullet.png" alt="bullet point" width="15"> SALADS</li></a>
-              <li><a href="#handhelds"><img src="images/bullet.png" alt="bullet point" width="15"> HANDHELDS</li></a>
-              <li><a href="#entree"><img src="images/bullet.png" alt="bullet point" width="15"> ENTRÉES</li></a>
-              <li><a href="#dessert"><img src="images/bullet.png" alt="bullet point" width="15"> DESSERTS</li></a>
+              <li><a href="#specials"><img src="images/bullet.png" alt="bullet point" width="15"> WEEKLY SPECIALS</a></li>
+              <li><a href="#drinks"><img src="images/bullet.png" alt="bullet point" width="15"> DRINK SPECIALS</a></li>
+              <li><a href="#smoothie"><img src="images/bullet.png" alt="bullet point" width="15"> SMOOTHIES</a></li>
+              <li><a href="#wine"><img src="images/bullet.png" alt="bullet point" width="15"> WINES & BUBBLY</a></li>
+              <li><a href="#beverage"><img src="images/bullet.png" alt="bullet point" width="15"> OTHER BEVERAGES</a></li>
+              <li><a href="#breakfast"><img src="images/bullet.png" alt="bullet point" width="15"> BREAKFAST</a></li>
+              <li><a href="#apps"><img src="images/bullet.png" alt="bullet point" width="15"> APPETIZERS</a></li>
+              <li><a href="#salad"><img src="images/bullet.png" alt="bullet point" width="15"> SALADS</a></li>
+              <li><a href="#handhelds"><img src="images/bullet.png" alt="bullet point" width="15"> HANDHELDS</a></li>
+              <li><a href="#entree"><img src="images/bullet.png" alt="bullet point" width="15"> ENTRÉES</a></li>
+              <li><a href="#dessert"><img src="images/bullet.png" alt="bullet point" width="15"> DESSERTS</a></li>
             </ul>
           </div>
         </section>
