--- a/event-one.html
+++ b/event-one.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNFZV3FRL2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RNFZV3FRL2');
+    </script>
+
     <meta charset="utf-8">
-    <title>Twyla's Café Tropical</title>
+    <meta name="keywords" content="singles week, dating, schitts creek"/>
+    <meta name="description" content="All singles are welcome to attend our second annual Singles' Week hosted in Twyla's Cafe Tropical!"/>
+
+    <title>Events-Twyla's Café Tropical</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +25,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Quattrocento+Sans&family=Righteous&display=swap" rel="stylesheet">
 
   </head>
-  <body>
+<body>
     
 <header>
     <p>4200 Main St., Schitt's Creek, ON L0C 1A0, Canada</p>
@@ -18,7 +33,7 @@
     <div class="header-container">
 
       <div class="header-logo">
-        <a href="index.html"><img src="./images/cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
+        <a href="index.html"><img src="./images/twyla's-cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
         </div>
   
       <div class="header-text">
@@ -56,7 +71,7 @@
 
           <h2>REGISTER FOR SINGLES' WEEK</h2>
 
-          <form class="contact-form" id="test_form" name="test_form" method="post" action="form.php" onsubmit="return validateForm(this)">
+          <form id="singlesweek" name="singlesweek" method="post" action="form.php" onsubmit="return validateForm(this)">
 
             <div class="first-name input-section">
                 <label for="firstname"> First Name:</label>
@@ -82,7 +97,7 @@
             <div class="checkbox input-section">
                 <h3>I'm interested in:</h3>
 
-                <input type="checkbox" name="interest" value="men" id="men"><label for="webdesign">Men</label><br>
+                <input type="checkbox" name="interest" value="men" id="men"><label for="men">Men</label><br>
 
                 <input type="checkbox" name="interest" value="women" id="women"><label for="women">Women</label><br>
 
@@ -94,9 +109,9 @@
                 <textarea name="comments" id="comments" cols="65" rows="5"></textarea>
             </div>
 
-            <div class="comments input-section">
-              <label for="comments" class="label-input-wrap"> What are your preferred pronouns?</label>
-              <textarea name="comments" id="comments" cols="65" rows="1"></textarea>
+            <div class="pronoun input-section">
+              <label for="pronoun" class="label-input-wrap"> What are your preferred pronouns?</label>
+              <textarea name="pronoun" id="pronoun" cols="65" rows="1"></textarea>
           </div>
 
             <div class="submit input-section">
