--- a/event-three.html
+++ b/event-three.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNFZV3FRL2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RNFZV3FRL2');
+    </script>
+
     <meta charset="utf-8">
-    <title>Twyla's Café Tropical</title>
+    <meta name="keywords" content="moira rose, the crows have eyes"/>
+    <meta name="description" content="The Crows Have Eyes Three is premiering on Interflix! Join the star of the film, Moira Rose, at her premiere after party."/>
+    <title>Events- Twyla's Café Tropical</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +32,7 @@
     <div class="header-container">
 
       <div class="header-logo">
-        <a href="index.html"><img src="./images/cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
+        <a href="index.html"><img src="./images/twyla's-cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
         </div>
   
       <div class="header-text">
@@ -38,7 +52,7 @@
 
     <main class="main-container">
         <section>
-            <img src="./images/crows-have-eyes.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <img src="./images/crows-have-eyes.jpg" alt="Crows Have Eyes Movie Poster" title="Crows Have Eyes">
         </section>
 
         <section class="event-content">
