--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNFZV3FRL2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RNFZV3FRL2');
+    </script>
+
     <meta charset="utf-8">
+    <meta name="keywords" content="restaurant schitts creek, Mediterranean food, smoothies, cafe"/>
+    <meta name="description" content="Twyla's Café Tropcial has been serving Schitt's Creek since 1947. Stop by today to enjoy our impressive selection of culinary delights!"/>
+
     <title>Twyla's Café Tropical</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css">
     <link href="lightbox/src/css/lightbox.css" rel="stylesheet" />
@@ -12,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Quattrocento+Sans&family=Righteous&display=swap" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="scripts/scripts.js" type=>"text/javascript"</script>
+    <script src="scripts/scripts.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -23,7 +38,7 @@
     <div class="header-container">
 
       <div class="header-logo">
-        <a href="index.html"><img src="./images/cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
+        <a href="index.html"><img src="./images/twyla's-cafe-logo-text.png" alt="Twyla's Café Tropical Logo" title="Twyla's Café Tropical Logo" width="250"></a>
         </div>
   
       <div class="header-text">
@@ -43,12 +58,12 @@
 
     <main class="main-container">
         <section>
-            <img class="hero" src="./images/home-hero-large.jpg" alt="Twyla Serves Customers" title="Twyla with Customers">
+            <img class="hero" src="./images/home-hero-large.jpg" alt="Restaurant Building" title="Outside of Restaurant">
         </section>
 
-        <span class="home-heading"><h1 >WELCOME TO TWYLA'S CAFÉ TROPICAL!</h1></span>
-
         <section class="three-column-home">
+
+          <h1>WELCOME TO TWYLA'S CAFÉ TROPICAL!</h1>
 
           <div class="event-left">
           <div class="home-image">
